--- a/IM_backend/app.env.template
+++ b/IM_backend/app.env.template
@@ -2,6 +2,7 @@ APP_MODE=debug/release
 HTTP_PORT=:8000/:3000
 MYSQL_DB_SOURCE=username:password@tcp(xxx.xxx.xxx.xxx:3306)/DBName?charset=utf8&parseTime=true
 MONGO_DB_SOURCE=mongodb://admin:password@xxx.xxx.xxx.xxx:27017/DBName
+MONGO_DB_NAME=***
 REDIS_ADDR=xxx.xxx.xxx.xxx:6379
 REDIS_DBNAME=2
 REDIS_PW=
