--- a/IM_backend/app.env.template
+++ b/IM_backend/app.env.template
@@ -10,3 +10,4 @@ DB_TEST_SOURCE=
 SERVER_ADDRESS=0.0.0.0:8000
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=15m
+DEFAULT_AVATAR = ****
